--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <!-- The hrefs here must match the ID attribute of the corresponding divs/containers -->
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#Get Involved">Get Involved</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#Ministry Teams">Ministry Teams</a></li>
-                         <li class="nav-item"><a class="nav-link" href="#NSO Events">NSO Events</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#GetInvolved">Get Involved</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#MinistryTeams">Ministry Teams</a></li>
+                         <li class="nav-item"><a class="nav-link" href="#NSOEvents">NSO Events</a></li>
+                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,7 +46,7 @@
     <h1 class="fw-bolder">JMU InterVarsity</h1><br>
     <p class="lead">
       We are a community that builds strong disciples of Christ who engage in the world
-      with the life, message, and worth of Jesus Christ <br>at James Madison University.
+      with <br> the life, message, and worth of Jesus Christ at James Madison University.
     </p>
     <br><a class="btn btn-lg custom-learn-btn mb-3" href="#about">Learn more!</a> <!-- Add a little margin below --> <br>
 
@@ -58,12 +58,11 @@
 
 
  <!-- About section - the ID attribute value here must match the corresponding href in navigation -->
-        <!-- For example - this section with id="about" must match the href="#about" in the navigation -->
         <section id="about">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>About JMU IV</h2>
+                        <h2 class="text-center custom-contact-title">About JMU IV</h2>
                         <p class="lead">Our desire, as we hope is yours, is to see the name of Jesus magnified and exalted on our campus, in the lives of our lost friends, and ultimately around the globe.</p>
                         <ul>
                             <li>InterVarsity is more than an organization. We don't want to be another program or function for people to attend.</li>
@@ -105,11 +104,11 @@
             </div>
         </section>
         <!-- Get involved section-->
-        <section class="bg-light" id="Get Involved">
+        <section class="bg-light" id="GetInvolved">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2>Get Involved</h2>
+                    <div class="col-lg-8"> 
+                        <h2 class="text-center custom-contact-title">Get Involved</h2>
                         <p class="lead">Small groups in InterVarsity are more than just Bible studies. They are witnessing communities for Christ. With God at the center, a small group grows into an established community that delves into the values of the word, worship and witness.</p>
                         <ul>
                             <li>Meet once a week for fellowship and Bible study. </li>
@@ -121,11 +120,11 @@
             </div>
         </section>
         <!-- Ministry Teams section-->
-        <section id="Ministry Teams">
+        <section id="MinistryTeams">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Ministry Teams</h2>
+                        <h2 class="text-center custom-contact-title">Ministry Teams</h2>
                         <p class="lead">As we hope is yours, our desire is to see the name of Jesus magnified and exalted on our campus, in the lives of our lost friends, and ultimately around the globe.</p>
                     </div>
                 </div>
@@ -133,9 +132,9 @@
         </section>
 
             <!-- New Students Events section-->
-<section id="NSO Events" class="py-5">
+<section id="NSOEvents" class="py-5">
     <div class="container">
-        <h2 class="text-center mb-4">NSO Events</h2>
+        <h2 class="text-center custom-contact-title">NSO Events</h2>
         <p class="lead text-center">New students at JMU are a major focus of our organization! We seek to help freshmen and transfer students form long lasting and healthy communities at JMU.</p>
         <div class="table-responsive">
             <table class="table table-bordered">
