--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Scrolling Nav - Start Bootstrap Template 5.3.3</title>
-        <link rel="icon" href="assets/favicon2.ico" />
+        <link rel="icon" type="image/png" href="assets/favicon2.png"/>
   <!-- LOAD BOOTSTRAP CSS - DO NOT DELETE -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
