--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
             <a href="https://www.instagram.com/jmu_iv/" target="_blank" class="text-white mx-2">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
+        </div>
     
     </div>
 </footer>
