--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       </head>
     
   
-    <body id="page-top">
+    <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="70" tabindex="0">
         <!-- Navigation-->
+        data-bs-offset="70" tabindex="0">
         <nav class="navbar navbar-expand-lg custom-navbar fixed-top" id="mainNav">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">JMU IV</a>
@@ -47,7 +48,7 @@
         </nav>
         <!-- Header -->
 <header class="hero-header text-white text-center">
-  <div class="container px-4">
+  <div class="container px-4"><br>
     <h1 class="fw-bolder">JMU InterVarsity</h1><br>
     <p class="lead">
       We are a community that builds strong disciples of Christ who engage in the world
@@ -186,32 +187,32 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Welcome BBQ</td>
+                        <td>Watermelon Bash</td>
                         <td>
                             <ul>
                                 <li>Meet other new students and leaders</li>
-                                <li>Enjoy free food and fellowship</li>
-                                <li>Learn about upcoming events</li>
+                                <li>Enjoy free watermelon and fellowship</li>
+                                <li>Get plugged into a small group</li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
-                        <td>Campus Prayer Walk</td>
+                        <td>Ice Cream Social</td>
                         <td>
                             <ul>
-                                <li>Pray over different areas of campus</li>
-                                <li>Connect with prayer groups</li>
-                                <li>Experience the power of collective prayer</li>
+                                <li>Enjoy some free ice cream</li>
+                                <li>Meet other new students at JMU</li>
+                                <li>Meet older students in the chapter</li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
-                        <td>Game Night</td>
+                        <td>Chapter Bonfire</td>
                         <td>
                             <ul>
                                 <li>Fun games and activities</li>
-                                <li>Get to know new friends</li>
-                                <li>Great way to relax after classes</li>
+                                <li>A time of fellowship and worship</li>
+                                <li>Enjoy catered food</li>
                             </ul>
                         </td>
                     </tr>
